feat: automate translation extraction

--- a/localisation/data/compiled-en.json
+++ b/localisation/data/compiled-en.json
@@ -1,27 +1,27 @@
 {
-  "page.index.section.stage.subline": "Building for the animal protection movement since 2019",
-  "page.index.section.stage.hero.alt": "Compassion, Creativity, Code",
-  "page.index.section.stage.cta": "Learn More",
   "page.index.section.introduction.headline": "<left>We are</left><right>VEGAN HACKTIVISTS</right>",
   "page.index.section.introduction.paragraph1": "We are a global community of passionate animal advocates offering our skills in building technology for the animal protection movement through <b>design, development, and data</b>. As capacity builders, we deliver innovative and quality services at no cost to advocates and organizations.",
   "page.index.section.introduction.paragraph2": "Our team is composed of highly-skilled and professional software engineers, designers, data scientists, and content creators. By leveraging our diverse background and skill sets, we design and build <b>data-driven projects</b> that aim to be effective and experimental.",
   "page.index.section.introduction.paragraph3": "Our <b>capacity-building services</b> are how we contribute to the movement. Leveraging our vast network of volunteers, we collaborate with individuals and organizations to offer web development, branding, and advisory services.",
+  "page.index.section.projects.cta": "See All Projects",
+  "page.index.section.projects.headline": "<left>Featured</left><right>PROJECTS</right>",
+  "page.index.section.projects.paragraph": "Every project we release is <b>100% free for everyone</b>. We believe in accessibility and transparency, and our projects reflect those values.",
+  "page.index.section.stage.cta": "Learn More",
+  "page.index.section.stage.hero.alt": "Compassion, Creativity, Code",
+  "page.index.section.stage.subline": "Building for the animal protection movement since 2019",
+  "page.index.section.video.cta": "Visit our channel",
   "page.index.section.video.headline.leftpart": "Watch our",
   "page.index.section.video.headline.rightpart": "intro video",
   "page.index.section.video.subline": "Watch our videos to learn more about us and our work:",
-  "page.index.section.video.cta": "Visit our channel",
-  "page.index.section.projects.headline": "<left>Featured</left><right>PROJECTS</right>",
-  "page.index.section.projects.paragraph": "Every project we release is <b>100% free for everyone</b>. We believe in accessibility and transparency, and our projects reflect those values.",
-  "page.index.section.projects.cta": "See All Projects",
-  "section.join-the-team.headline": "JOIN OUR TEAM",
-  "section.join-the-team.paragraph": "Are you a developer, designer, writer, or a creative professional interested in applying your digital skills for the animals? Learn more about our team members and view our openings below.",
-  "section.join-the-team.cta.meet-the-team": "Meet the Team",
-  "section.join-the-team.cta.join": "Apply to Join",
+  "section.blog-teaser.cta": "See All Posts",
   "section.blog-teaser.headline": "<left>On the</left><right>BLOG</right>",
   "section.blog-teaser.paragraph": "Read our blog post for project updates, announcements, interviews, guest editorials, and much more.",
-  "section.blog-teaser.cta": "See All Posts",
   "section.grants-cta.apply.cta": "Apply Now",
   "section.grants-cta.apply.paragraph": "We offer grants for impactful and effective work in animal advocacy and activism.",
   "section.grants-cta.visit-year-review.cta": "See our impact",
-  "section.grants-cta.visit-year-review.paragraph": "Read our annual impact review and see what we've accomplished last year."
+  "section.grants-cta.visit-year-review.paragraph": "Read our annual impact review and see what we've accomplished last year.",
+  "section.join-the-team.cta.join": "Apply to Join",
+  "section.join-the-team.cta.meet-the-team": "Meet the Team",
+  "section.join-the-team.headline": "JOIN OUR TEAM",
+  "section.join-the-team.paragraph": "Are you a developer, designer, writer, or a creative professional interested in applying your digital skills for the animals? Learn more about our team members and view our openings below."
 }
