feat: manage text with react-intl

--- a/localisation/data/compiled-en.json
+++ b/localisation/data/compiled-en.json
@@ -1,4 +1,9 @@
 {
+  "page.contact.next-seo.title": "Contact Us",
+  "page.contact.section.get-in-contact.content": "If you'd like to get in touch with us, please use our contact form below! We do our best to respond to every email within 48 hours. Please make sure to check your spam folder!",
+  "page.contact.section.get-in-contact.headline": "Get in contact",
+  "page.index.next-seo.title": "Vegan Hacktivists",
+  "page.index.next-seo.title-template": "%s | Compassion, Creativity, Code!",
   "page.index.section.introduction.headline": "<left>We are</left><right>VEGAN HACKTIVISTS</right>",
   "page.index.section.introduction.paragraph1": "We are a global community of passionate animal advocates offering our skills in building technology for the animal protection movement through <b>design, development, and data</b>. As capacity builders, we deliver innovative and quality services at no cost to advocates and organizations.",
   "page.index.section.introduction.paragraph2": "Our team is composed of highly-skilled and professional software engineers, designers, data scientists, and content creators. By leveraging our diverse background and skill sets, we design and build <b>data-driven projects</b> that aim to be effective and experimental.",
@@ -13,6 +18,42 @@
   "page.index.section.video.headline.leftpart": "Watch our",
   "page.index.section.video.headline.rightpart": "intro video",
   "page.index.section.video.subline": "Watch our videos to learn more about us and our work:",
+  "page.join.hero.image-alt": "You are their voice",
+  "page.join.next-seo.title": "Join Us",
+  "page.join.section.available-positions.headline": "Available Positions",
+  "page.join.section.job-roles.description.0": "Write quality, clean code for projects at various stages of development. We use Laravel for most projects, and expect you to be familiar or interested in levelling up in PHP, JS, and CSS.",
+  "page.join.section.job-roles.description.1": "Define the user's experience and interface for our projects by producing modern, visually-appealing web designs—from wireframes and mockups to the app's final look and feel.",
+  "page.join.section.job-roles.description.2": "Craft our voice and brand on social media, whether it's through developing content strategy, analyzing engagement data, or interacting with followers.",
+  "page.join.section.job-roles.description.3": "Produce original and well-written content for a variety of medium—our blog, newsletter, social media, software copy, and more.",
+  "page.join.section.job-roles.description.4": "Create high-quality and innovative designs that include logo and branding, social media visuals, and UI components.",
+  "page.join.section.job-roles.title.0": "Developers",
+  "page.join.section.job-roles.title.1": "UI Designers",
+  "page.join.section.job-roles.title.2": "Social Media Manager",
+  "page.join.section.job-roles.title.3": "Writers",
+  "page.join.section.job-roles.title.4": "Graphic Designers",
+  "page.join.section.join-our-team.footer": "Our team uses Discord for internal communication, Trello for project and task workflow, Figma for designing, and GitHub for code management and collaboration.",
+  "page.join.section.join-our-team.headline": "Join our team",
+  "page.join.section.join-our-team.subline": "We are growing! If you believe in our mission and want to help animals through technology, join us. Even if you do not meet all qualifications, we encourage you to apply anyway.",
+  "page.join.section.other-roles.content": "Don't see a role that matches your skills? Reach out to us anyway. We'd love to get to know you and appreciate your interest in supporting us!",
+  "page.join.section.other-roles.cta": "Apply Now",
+  "page.join.section.other-roles.headline": "Other Talents & Specialists",
+  "page.join.section.priority-positions.headline": "High Priority Positions",
+  "page.join.section.priority-positions.subline": "We're actively seeking skilled volunteers to fulfill the following positions:",
+  "page.join.section.priority-roles.description.0": "Recruit, onboard, and engage our growing VH community on Discord. Candidate will host events, facilitate interactions, and support our growing community of volunteers.",
+  "page.join.section.priority-roles.description.1": "Manage and oversee grantwriting and fundraising pipeline. Candidate must exemplify strong organizational and writing skills, with excellent grammar and spelling.",
+  "page.join.section.priority-roles.description.2": "Support VH: Playground by hosting virtual events, connecting people with opportunities, and engaging the Discord community. Candidate should have a deep commitment to building an inclusive community.",
+  "page.join.section.priority-roles.description.3": "Recruit, onboard, and engage our growing VH community on Discord. Candidate will host events, facilitate interactions, and support our growing community of volunteers.",
+  "page.join.section.priority-roles.title.0": "Community Manager",
+  "page.join.section.priority-roles.title.1": "Grant Writer",
+  "page.join.section.priority-roles.title.2": "Playground Manager",
+  "page.join.section.requirements": "Commitment to a vegan lifestyle",
+  "page.join.section.requirements.0": "Commitment to a vegan lifestyle",
+  "page.join.section.requirements.1": "Professional experience in your field",
+  "page.join.section.requirements.2": "Portfolio, resume, or work product to demonstrate experience",
+  "page.join.section.requirements.3": "Ability to volunteer at least 5 hours a week",
+  "page.newsletter.next-seo.title": "Our Newsletter",
+  "page.not-found.error-message": "The page you requested ({asPath}) does not exist",
+  "page.not-found.next-seo.title": "Page not found",
   "section.blog-teaser.cta": "See All Posts",
   "section.blog-teaser.headline": "<left>On the</left><right>BLOG</right>",
   "section.blog-teaser.paragraph": "Read our blog post for project updates, announcements, interviews, guest editorials, and much more.",
