feat(translation): move text to translation

--- a/localisation/data/compiled-en.json
+++ b/localisation/data/compiled-en.json
@@ -1,4 +1,5 @@
 {
+  "app.template.next-seo.default.titleTemplate": "%s | Vegan Hacktivists",
   "page.contact.next-seo.title": "Contact Us",
   "page.contact.section.get-in-contact.content": "If you'd like to get in touch with us, please use our contact form below! We do our best to respond to every email within 48 hours. Please make sure to check your spam folder!",
   "page.contact.section.get-in-contact.headline": "Get in contact",
@@ -54,6 +55,41 @@
   "page.newsletter.next-seo.title": "Our Newsletter",
   "page.not-found.error-message": "The page you requested ({asPath}) does not exist",
   "page.not-found.next-seo.title": "Page not found",
+  "page.services.next-seo.title": "Services",
+  "page.services.section.contact.content": "If you'd like to discuss any of our service offerings, please use our our contact form to get in touch. We do our best to promptly respond to every inquiry.",
+  "page.services.section.hero.image-alt": "Supporting the Animal Protection Movement",
+  "page.services.section.our-services.content.0": "As capacity builders, we offer our skills and services to the animal protection movement. From development and design to content creation, volunteers, and operational advice, we're here to help elevate your work for the animals.",
+  "page.services.section.our-services.content.1": "Given our capacity and your organizational needs, we may consider taking on paid projects that need dedicated or priority support. If this is your situation, please contact us below and we will explore how best to scope the work to fit within your budget.",
+  "page.services.section.our-services.header.text": "Our services",
+  "page.services.section.service-block.0.button-label": "Apply for a free website",
+  "page.services.section.service-block.0.content": "If you're an independent activist or organization with little to no funding, you're the ones we want to help! We support advocates who have few resources dedicated to website design, development, and/or have limited knowledge or time to build it themselves.",
+  "page.services.section.service-block.0.title": "Websites",
+  "page.services.section.service-block.1.button-label": "Apply for free design support",
+  "page.services.section.service-block.1.content": "We have a dedicated team to help design your brand's identity, logo, social media assets, website, and more. We collaborate closely with you to understand who you are and what your needs are, so that we can best curate your digital presence.",
+  "page.services.section.service-block.1.title": "Design",
+  "page.services.section.service-block.2.button-label": "Let's chat about your idea",
+  "page.services.section.service-block.2.content": "Do you have an idea that would help bring us closer to a vegan world? Whether it's an app, event, or media that you are interested in producing, we'll help get the resources you need to get your idea off the ground. If the concept is aligned with our work, we'd be happy to explore partnerships.",
+  "page.services.section.service-block.2.title": "Projects",
+  "page.services.section.service-block.3.button-label": "Learn about our grant program",
+  "page.services.section.service-block.3.content": "We offer up to $1,000 USD in seed funding for effective animal rights activism! We seek individual and grassroots groups whose primary purpose is to help reduce suffering for non-human farmed animals.",
+  "page.services.section.service-block.3.title": "Funding",
+  "page.services.section.service-block.4.button-label": "Contact us for advice",
+  "page.services.section.service-block.4.content": "Our advisory and core team members have a plethora of experience in tech, design, and nonprofit management. We are happy to advise individuals and organizations to the best of our abilities, whether it be technology, organizational strategy, marketing, or fundraising.",
+  "page.services.section.service-block.4.title": "Advice",
+  "page.support.next-seo.title": "Support Us",
+  "page.support.section.hero.image-alt": "You are their voice",
+  "page.support.section.support-us.donation-card.0.button-label": "donate",
+  "page.support.section.support-us.donation-card.0.content": "For one-time, smaller donations",
+  "page.support.section.support-us.donation-card.0.title": "PayPal",
+  "page.support.section.support-us.donation-card.1.button-label": "become a patron",
+  "page.support.section.support-us.donation-card.1.content": "Become a monthly supporter for as little as $5 a month",
+  "page.support.section.support-us.donation-card.1.title": "Patreon",
+  "page.support.section.support-us.donation-card.2.button-label": "contact us",
+  "page.support.section.support-us.donation-card.2.content": "For larger donations (US tax-deductible)",
+  "page.support.section.support-us.donation-card.2.title": "Other",
+  "page.support.section.support-us.header.content": "With your gift, we can make a greater impact and change the world for our animal friends.",
+  "page.support.section.support-us.header.title": "Support Us",
+  "page.support.section.support-us.introduction": "We are a vegan volunteer team that builds technology for organizations and individual activists in the animal protection movement. If you believe in the work we do and would like to support us, please consider making a donation.",
   "section.blog-teaser.cta": "See All Posts",
   "section.blog-teaser.headline": "<left>On the</left><right>BLOG</right>",
   "section.blog-teaser.paragraph": "Read our blog post for project updates, announcements, interviews, guest editorials, and much more.",
