feat(translation): move text to translation

--- a/localisation/data/compiled-en.json
+++ b/localisation/data/compiled-en.json
@@ -77,6 +77,9 @@
   "page.services.section.service-block.4.content": "Our advisory and core team members have a plethora of experience in tech, design, and nonprofit management. We are happy to advise individuals and organizations to the best of our abilities, whether it be technology, organizational strategy, marketing, or fundraising.",
   "page.services.section.service-block.4.title": "Advice",
   "page.support.next-seo.title": "Support Us",
+  "page.support.section.donation-goals.cta-label": "Donate Now",
+  "page.support.section.donation-goals.introduction": "See our Patreon goals below, and help us grow and be more effective!",
+  "page.support.section.donation-goals.title": "Monthly Patreon Goals",
   "page.support.section.hero.image-alt": "You are their voice",
   "page.support.section.support-us.donation-card.0.button-label": "donate",
   "page.support.section.support-us.donation-card.0.content": "For one-time, smaller donations",
@@ -90,9 +93,19 @@
   "page.support.section.support-us.header.content": "With your gift, we can make a greater impact and change the world for our animal friends.",
   "page.support.section.support-us.header.title": "Support Us",
   "page.support.section.support-us.introduction": "We are a vegan volunteer team that builds technology for organizations and individual activists in the animal protection movement. If you believe in the work we do and would like to support us, please consider making a donation.",
+  "page.support.section.support-us.subtitle": "We prefer a <bold>monthly donation via Patreon</bold> as that gives us the most stability every month, but we also accept one-time donations via PayPal. If you would like to make a larger contribution of $1,000 or more (thank you!), please <contact-link>contact us</contact-link> for other payment methods and tax deduction via our fiscal sponsor.",
+  "page.support.section.thank-you.introduction": "We want to take a moment to thank the people below for their support—for those who have awarded us grants or contributed donations, whether one-time or recurring. We are grateful for your belief in our vision and support for our work.",
+  "page.support.section.thank-you.title": "Thank You",
   "section.blog-teaser.cta": "See All Posts",
   "section.blog-teaser.headline": "<left>On the</left><right>BLOG</right>",
   "section.blog-teaser.paragraph": "Read our blog post for project updates, announcements, interviews, guest editorials, and much more.",
+  "section.crypto-donation.copy-wallet.button.label": "Copy",
+  "section.crypto-donation.headline": "We accept cryptocurrency!",
+  "section.crypto-donation.introduction": "Click the QR code to view it enlarged, or copy the code to your clipboard.",
+  "section.crypto-donation.notification.copy.error": "Something went wrong copying the code, please select and copy it manually",
+  "section.crypto-donation.notification.copy.success": "Code succesfully copied!",
+  "section.crypto-donation.overlay.label": "Donate {currencyName}",
+  "section.crypto-donation.subline": "Want to send something else? <contact-link>Contact us!</contact-link>",
   "section.grants-cta.apply.cta": "Apply Now",
   "section.grants-cta.apply.paragraph": "We offer grants for impactful and effective work in animal advocacy and activism.",
   "section.grants-cta.visit-year-review.cta": "See our impact",
@@ -100,5 +113,15 @@
   "section.join-the-team.cta.join": "Apply to Join",
   "section.join-the-team.cta.meet-the-team": "Meet the Team",
   "section.join-the-team.headline": "JOIN OUR TEAM",
-  "section.join-the-team.paragraph": "Are you a developer, designer, writer, or a creative professional interested in applying your digital skills for the animals? Learn more about our team members and view our openings below."
+  "section.join-the-team.paragraph": "Are you a developer, designer, writer, or a creative professional interested in applying your digital skills for the animals? Learn more about our team members and view our openings below.",
+  "section.support-progess-bar.current.label": "Current monthly Patreon donations",
+  "section.support-progess-bar.goal.0.label": "Needed to cover basic operational expenses",
+  "section.support-progess-bar.goal.1.label": "We can utilize more useful services and tech",
+  "section.support-progess-bar.goal.2.label": "We can ramp up value and services offered",
+  "section.support-progess-bar.goal.3.label": "Self-Sustainable Goal",
+  "section.support-progess-bar.mobile.current.label": "Current monthly Patreon donations",
+  "section.support-progess-bar.mobile.goal.0.label": "Needed to cover operational expenses",
+  "section.support-progess-bar.mobile.goal.1.label": "Can afford more useful services and tech",
+  "section.support-progess-bar.mobile.goal.2.label": "We can ramp up value and services offered",
+  "section.support-progess-bar.mobile.goal.3.label": "Self-Sustainable Goal"
 }
