refactor: join message fragments in inro video header

--- a/localisation/data/compiled-en.json
+++ b/localisation/data/compiled-en.json
@@ -15,8 +15,7 @@
   "page.index.section.stage.hero.alt": "Compassion, Creativity, Code",
   "page.index.section.stage.subline": "Building for the animal protection movement since 2019",
   "page.index.section.video.cta": "Visit our channel",
-  "page.index.section.video.headline.leftpart": "Watch our",
-  "page.index.section.video.headline.rightpart": "intro video",
+  "page.index.section.video.headline": "Watch our <b>intro video</b>",
   "page.index.section.video.subline": "Watch our videos to learn more about us and our work:",
   "page.join.hero.image-alt": "You are their voice",
   "page.join.next-seo.title": "Join Us",
